# steel

./: .gitignore  Cargo.toml  LICENSE  README.md  editor-export.md
android-project/app/src/main/: AndroidManifest.xml
examples/ball/: Cargo.toml
examples/ball/asset/: game.scene  game.scene.asset  main.scene  main.scene.asset
examples/ball/src/: lib.rs
examples/demo/: Cargo.toml
examples/demo/asset/model/: viking_room.obj.asset  viking_room.png.asset
examples/demo/asset/scene/: component.scene  component.scene.asset  empty.scene  model.scene  model.scene.asset  ray-tracing-in-one-weekend.scene  ray-tracing-in-one-weekend.scene.asset  scene.scene  texture.scene
examples/demo/src/: components.rs  lib.rs  ray_tracing_in_one_weekend.rs
examples/test-project/: Cargo.toml  scene.json
examples/test-project/asset/image/: cat.png.asset  sculpture.jpg.asset
examples/test-project/asset/scene/: empty.scene  empty.scene.asset  scene.scene  scene.scene.asset  test.scene  test.scene.asset  texture.scene  texture.scene.asset
examples/test-project/src/: lib.rs
steel/: Cargo.toml
steel-build/android-project/app/: build.gradle
steel-build/android-project/app/src/main/java/com/sc/vulkanodemo/: MainActivity.kt
steel-build/steel-client/: Cargo.toml
steel-build/steel-client/src/: lib.rs
steel-build/steel-dynlib/: Cargo.toml
steel-build/steel-dynlib/src/: lib.rs
steel-build/steel-project/: Cargo.toml
steel-build/steel-server/: Cargo.toml
steel-build/steel-server/src/: lib.rs
steel-client/: Cargo.toml
steel-client/android-project/: build.gradle
steel-client/android-project/app/src/main/java/com/sc/vulkanodemo/: MainActivity.kt
steel-client/src/: lib.rs
steel-common/: Cargo.toml
steel-common/src/: app.rs  asset.rs  camera.rs  data.rs  engine.rs  ext.rs  lib.rs  platform.rs  prefab.rs
steel-common/src/platform/: mod.rs  platform_android.rs  platform_desktop.rs  platform_editor.rs
steel-dynlib/: Cargo.toml
steel-dynlib/src/: lib.rs
steel-editor/: Cargo.toml
steel-editor/src/: lib.rs  locale.rs  project.rs  ui.rs  utils.rs
steel-editor/src/ui/: data_window.rs  image_window.rs  menu_bar.rs  mod.rs
steel-engine/: Cargo.toml
steel-engine/src/: app.rs  asset.rs  camera.rs  data.rs  edit.rs  engine.rs  entityinfo.rs  hierarchy.rs  input.rs  lib.rs  name.rs  physics2d.rs  platform.rs  prefab.rs  render.rs  render2d.rs  renderer2d.rs  scene.rs  shape.rs  shape2d.rs  shape3d.rs  time.rs  transform.rs  ui.rs
steel-engine/src/render/: canvas.rs  image.rs  mesh.rs  mod.rs  model.rs  renderer.rs  renderer2d.rs  shader.rs  texture.rs  texture2d.rs
steel-engine/src/render/pipeline/: mod.rs
steel-engine/src/render/pipeline/rasterization/: mod.rs  shader.rs
steel-engine/src/render/pipeline/raytracing/: material.rs  mod.rs  shader.rs  util.rs
steel-engine/src/render/pipeline/raytracing/util/: ash.rs  mod.rs  vulkano.rs
steel-engine/steel-proc/: Cargo.toml
steel-engine/steel-proc/src/: edit.rs  lib.rs
steel-engine/steel-shader/: Cargo.toml
steel-engine/steel-shader/src/: lib.rs
steel-project/: Cargo.toml
steel-project/src/: lib.rs
steel/src/: lib.rs  steel.rs
tutorial/: 1-introduction.md  2-run-steel-editor.md  3-create-project.md  4-scene-building.md  5-engine-implementation.md  6-player-control.md  7-push-the-ball.md  8-game-lost.md  9-main-menu.md  table-of-contents.md
tutorial/chs/: 1-引言.md  2-运行Steel编辑器.md  3-创建项目.md  4-场景搭建.md  4-编写代码.md  5-场景搭建.md  5-实现Engine.md  6-玩家控制.md  7-推一下球.md  8-游戏失败.md  9-主菜单.md  目录.md
tutorial/eng/: 1-introduction.md  2-run-steel-editor.md  3-create-project.md  4-scene-building.md  4-write-code.md  5-engine-implementation.md  5-scene-building.md  6-player-control.md  7-push-the-ball.md  8-game-lost.md  9-main-menu.md  table-of-contents.md
