[package]
name = "steel-client"
version = "0.1.0"
edition = "2021"
description = "The game client for the steel game engine."
license = "MIT"

[dependencies]
# steel-project path is set for rust-analyzer, and is modified to open project temporily while compiling
steel-project = { path = "../steel-project" }
steel-common = { version = "0.1.0", path = "../steel-common" }

vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
vulkano-util = "0.34.1"
egui_winit_vulkano = "0.27.0"
egui = "0.24.1"
log = "0.4"
winit = { version = "0.28.6", features = [ "android-game-activity" ] }
winit_input_helper = "0.14.1"
shipyard = { version = "0.6.4", features = [ "serde1" ] }
rayon = "1.8.0"
parry2d = "0.13.5"
rapier2d = { version = "0.17.2", features = [ "debug-render" ] }
nalgebra = { version = "0.32.3", features = [ "convert-glam024" ] }
glam = { version = "0.24.2", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
indexmap = { version = "2.2.2", features = [ "serde" ] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"

[features]
default = []
desktop = []

[lib]
name = "main"
crate-type = [ "cdylib" ]

[[bin]]
name = "steel-client"
path="src/lib.rs"
required-features = [ "desktop" ]
