[package]
name = "steel-dynlib"
version = "0.1.0"
edition = "2021"
description = "The dynamic library for the steel game engine to reload at runtime."
license = "MIT"

[dependencies]
# steel-project is set to test-project for rust-analyzer, and is modified to open project temporily while compiling
steel-project = { path = "../examples/test-project" }

[lib]
name = "steel"
crate_type = [ "cdylib" ]
