[package]
name = "steel-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel-common = { path = "../steel-common" }
libloading = "0.8"

vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
vulkano-util = "0.33.0"
log = "0.4"
winit = { version = "0.28.6", features = [ "android-game-activity" ] }
shipyard = { version = "0.6.2", features = [ "serde1" ] }
rayon = "1.8.0"
rapier2d = "0.17.2"
glam = { version = "0.24.2", features = [ "serde" ] }
egui_winit_vulkano = "0.25.0"
egui = "0.22.0"
egui_demo_lib = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"

[features]
default = []
desktop = []

[lib]
name = "main"
crate_type = ["cdylib"]

[[bin]]
name = "steel-editor"
path="src/lib.rs"
required-features = [ "desktop" ]
