[package]
name = "steel-project"
version = "0.2.0"
edition = "2021"

[lib]
name = "steel"

[dependencies]
steel-engine = { version = "0.2.0", path = "../../steel-engine" }

vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
vulkano-util = "0.34.1"
egui_winit_vulkano = "0.27.0"
egui = "0.24.1"
log = "0.4"
winit = { version = "0.28.6", features = [ "android-game-activity" ] }
winit_input_helper = "0.14.1"
shipyard = { version = "0.7.1", features = [ "serde1" ] }
rayon = "1.8.0"
parry2d = "0.17"
parry3d = "0.17"
rapier2d = { version = "0.22", features = [ "debug-render" ] }
rapier3d = { version = "0.22", features = [ "debug-render" ] }
nalgebra = { version = "0.33", features = [ "convert-glam024" ] }
glam = { version = "0.24.2", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
indexmap = { version = "2.2.2", features = [ "serde" ] }
