[package]
name = "steel-dynlib"
version = "0.2.0"
edition = "2021"
description = "The dynamic library for the steel game engine to reload at runtime."
license = "MIT"

[dependencies]
# steel-project path is set for rust-analyzer, and is modified to open project temporily while compiling
steel-project = { path = "../steel-project" }

[lib]
name = "steel"
crate-type = [ "cdylib" ]
